--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <!-- ========= CUSTOMISE SECTION =========== -->
                 <!-- You can change 'Cloud Computing Predict' to 'Your Name' -->
                 <!-- The Masthead will then read: '{Your Name} - Project Portfolio' -->
-                <h1 class="masthead-heading text-uppercase mb-0">Ayanda - Project Portfolio</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Ayanda's - Project Portfolio</h1>
                 <!-- ======================================= -->
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
@@ -94,7 +94,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/cloud.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/fabio-oyXis2kALVg-unsplash.jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -106,7 +106,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/sentiment.png" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/markus-spiske-hvSr_CVecVI-unsplash.jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                             </div>
                             <!-- ========= CUSTOMISE SECTION =========== -->
                             <!-- Replace the link in the `src` string below to depict an image related to a project of yours -->
-                            <img class="img-fluid" src="assets/img/portfolio/recognition.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/christina-wocintechchat-com-glRqyWJgUeY-unsplash.jpg" alt="" />
                             <!-- ======================================= -->
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://github.com/Explore-AI">
+                    <a class="btn btn-xl btn-outline-light" href="https://github.com/AyandaZwane">
                         <i class="fas fa-download mr-2"></i>
                         Link to My GitHub Repo :D
                     </a>
