API gateway and index file updates

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg"  alt="" />
+                <img class="masthead-avatar mb-5" src="assets/img/portfolio/3d0ce51d-0ada-4c33-a898-503839006627.jpg"  alt="" />
                 <!-- Masthead Heading-->
                 <!-- ========= CUSTOMISE SECTION =========== -->
                 <!-- You can change 'Cloud Computing Predict' to 'Your Name' -->
